--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,12 @@
         "sourceType": "module"
     },
     "rules": {
-        "prettier/prettier": "error",
+        "prettier/prettier": [
+            "error",
+            {
+              "endOfLine": "auto",
+            }
+          ],
         "one-var": "off",
         "max-params": ["error", 5],
         "arrow-body-style": ["error", "always"],
