--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node ."
+    "start": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "express-validator": "^6.14.0",
     "node-cleanup": "^2.1.2",
     "qrcode": "^1.5.0",
+    "socket.io": "^4.4.1",
     "ws": "^8.5.0"
   },
   "devDependencies": {
